local-sample/new-keycloak/grafana-sso/ingress-keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-keycloak
  namespace: my-keycloak-operator
  #namespace: local-instance
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/server-snippet: |2-

                            location ~* "^/auth/realms/master/metrics" {
                                return 301 /auth/realms/master;
                              }
  labels:
    app: keycloak
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /auth
        pathType: Prefix
        #pathType: ImplementationSpecific
        backend:
          service:
            name: example-keycloak-discovery
            port:
              number: 7800
